Fixing spacing & padding issues

--- a/portfolio.css
+++ b/portfolio.css
@@ -32,11 +32,12 @@ body {
 
 h1.big-name {
   font-size: 200px;
-  padding: 0px;
+  padding-top: 30px;
   margin: 0px;
+  line-height: 90%;
 }
 
-@media screen and (max-width: 1023px) { h1.big-name { font-size: 90px; }}
+@media screen and (max-width: 1023px) { h1.big-name { font-size: 60px; }}
 
 .big-name{
   text-align: center;
